--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 
+server.port=8080
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/new_schema?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=pass1234
