--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,13 @@
 
-server.port=8080
+server.port=8081
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/new_schema?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=pass1234
+
+#SQL bankAccountTest
+spring.jpa.show-sql = true
+
+#Hibernate Properties
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
+#Create, Create-drop
