--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,16 @@
 		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
+
+
+		<dependency>
+			<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>mssql-jdbc</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -53,5 +63,20 @@
 		</dependency>
 
 	</dependencies>
+
+	<packaging>jar</packaging>
+
+	<build>
+		<finalName>java-backend</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<executable>true</executable>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
