--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,17 @@
 
-server.port=8081
+server.port=8082
+
+
+#spring.datasource.url=jdbc:sqlserver://localhost;databaseName=KKVL
+#spring.datasource.username=sa
+#spring.datasource.password=12345
+#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+
+
+
+
+
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/new_schema?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=pass1234
@@ -9,5 +21,7 @@ spring.jpa.show-sql = true
 
 #Hibernate Properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.ddl-auto=update
 #Create, Create-drop
