--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ server.port=8082
 
 
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/new_schema?useSSL=false
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/bankingtestdb?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=pass1234
 
