--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,13 @@
 			<scope>test</scope>
 		</dependency>
 
+
+		<dependency>
+			<groupId>org.xerial</groupId>
+			<artifactId>sqlite-jdbc</artifactId>
+			<version>3.39.3.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<packaging>jar</packaging>
