--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,14 @@ spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.Im
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.ddl-auto=update
 #create, create-drop
+
+
+
+#SQLite
+driverClassName=org.sqlite.JDBC
+url=jdbc:sqlite:memory:myDb?cache=shared
+username=sa
+password=sa
+hibernate.dialect=com.baeldung.dialect.SQLiteDialect
+hibernate.hbm2ddl.auto=create-drop
+hibernate.show_sql=true
