Handled Logging on console and also file.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,12 @@ spring.jpa.hibernate.ddl-auto=update
 #create, create-drop
 
 
+#Logging
+logging.level.root=INFO
+logging.level.com.javaAssignment=TRACE
+
+#Loging to a file
+logging.file.path=logs/
+logging.file.name=logs/application.log
+
 
