--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
 			<version>3.39.3.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>io.reactivex</groupId>
+			<artifactId>rxjava-reactive-streams</artifactId>
+			<version>1.2.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<packaging>jar</packaging>
