--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,12 @@
 			<version>1.2.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session-jdbc</artifactId>
+		</dependency>
+
+
 	</dependencies>
 
 	<packaging>jar</packaging>
