--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-server.port=8082
+server.port=8083
 
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/bankingtestdb?useSSL=false
 spring.datasource.username=root
@@ -24,4 +24,5 @@ logging.level.com.javaAssignment=TRACE
 logging.file.path=logs/
 logging.file.name=logs/application.log
 
-
+#Session
+spring.session.jdbc.initialize-schema= always
